--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang= "en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel = "stylesheet"  href="styles/style.css">
+        <title>Floyd Cain</title>
+    </head>
     <body>
         <h1>Hello world!</h1>
         <p>I'm hosted with Github Pages.</p>
