Updated about me paragraph

--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
             <main>
                 <img id="portrait" src="/images/portrait.jpg">
                 <h1 class="page-header">Floyd Cain</h1>
-                <p>College graduate ready to launch a career in software development. Motivated from studies and home projects alike. Excited to expand knowledge and experience through professional development.</p>
+                <p>I’m a recent Computer Science graduate from Stephen F. Austin State University with extensive experience in Windows OS, Java, PHP, and GitHub. During my college career, I worked part-time at the East Texas Professional Credit Union where I was recognized as employee of the month in January 2022 for my work ethic and dependability.<br><br>
+
+                    In my spare time, I enjoy practicing software and web development, playing video games, reading, and learning new skills. I am actively seeking opportunities in software development where I can expand my knowledge and experience. <br><br>
+                    
+                    With my strong problem-solving skills and passion for technology, I’m confident that I can make valuable contributions to any team.</p>
                 <form action="pages/showcase.html">
                     <button id="btnShowcase"><strong>Showcase</strong></button>
                 </form>
