--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div id="page-container">
         <div id="content-wrap">
-            <header class="grid-contianer">
+            <!--<header class="grid-contianer">
                 <ul class="navBar item2">
                     <li><a href="index.html">About</a></li>
                     <li>
@@ -24,7 +24,7 @@
                     </li>
                     <li><button class="button-mini" id="btnContact">Contact</button></li>
                 </ul>
-            </header>
+            </header>-->
 
             <main>
                 <img id="portrait" src="/images/portrait.jpg">
@@ -34,9 +34,9 @@
                     In my spare time, I enjoy practicing software and web development, playing video games, reading, and learning new skills. I am actively seeking opportunities in software development where I can expand my knowledge and experience. <br><br>
                     
                     With my strong problem-solving skills and passion for technology, I’m confident that I can make valuable contributions to any team.</p>
-                <form action="pages/showcase.html">
+                <!--<form action="pages/showcase.html">
                     <button id="btnShowcase"><strong>Showcase</strong></button>
-                </form>
+                </form>-->
 
                 <div class="media-section">
                     <a href="https://www.linkedin.com/in/floydcain/" target="_blank"><span class="iconify"
@@ -50,8 +50,8 @@
 
         <footer>
             <p>
-                <a href="pages/about.html">about me</a> | 
-                <a href="pages/contact.html">contact me</a> | 
+                <!--<a href="pages/about.html">about me</a> | 
+                <a href="pages/contact.html">contact me</a> | -->
                 This page is hosted with Github Pages.
             </p>
         </footer>
