Updated summary section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
         <div class="flex-container">
             <fieldset id="section-summary" class="section-container">
                 <legend class="section-title">Summary</legend>
+                <div>
+                    I am a passionate software developer driven to build powerful tools that improve people's lives. I take pride in the quality of my work, enjoy solving complex problems, and thrive in dynamic environments.<br><br>
+                    My experience during my college career at Stephen F. Austin State University ignited my passion for software development. In my current role at East Texas Professional Credit Union, I have 2 years of experience building software solutions using Java and various other technologies like HTML, PHP, and SQL. I'm also intrigued about contributing to the open-source community and have actively participated in TradeNote on GitHub.<br><br>
+                    I'm always eager to connect with fellow developers and explore new challenges. Feel free to reach out if you have any interesting projects or opportunities.
+                </div>
             </fieldset>
             <fieldset id="section-contact" class="section-container">
                 <legend class="section-title">Contact</legend>
