Added half/full width containers

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <main>
         <div class="flex-container">
-            <fieldset id="section-summary" class="section-container">
+            <fieldset id="section-summary" class="section-container half-width">
                 <legend class="section-title">Summary</legend>
                 <div>
                     <p>I am a passionate software developer driven to build powerful tools that improve people's lives. I take pride in the quality of my work, enjoy solving complex problems, and thrive in dynamic environments.<br><br>
@@ -25,7 +25,7 @@
                     I'm always eager to connect with fellow developers and explore new challenges. Feel free to reach out if you have any interesting projects or opportunities.</p>
                 </div>
             </fieldset>
-            <fieldset id="section-contact" class="section-container">
+            <fieldset id="section-contact" class="section-container half-width">
                 <legend class="section-title">Contact</legend>
                 <div>
                     <a href="https://www.linkedin.com/in/floydcain/" target="_blank"><span class="iconify"
@@ -35,14 +35,14 @@
                 </div>
             </fieldset>
             <!-- A carousel for space. -->
-            <fieldset id="section-projects" class="section-container">
+            <fieldset id="section-projects" class="section-container full-width">
                 <legend class="section-title">Projects</legend>
             </fieldset>
             <!-- Use keywords and icons to visually represent skillset. -->
-            <fieldset id="section-skills" class="section-container">
+            <fieldset id="section-skills" class="section-container half-width">
                 <legend class="section-title">Skills</legend>
             </fieldset>
-            <fieldset id="section-experience" class="section-container">
+            <fieldset id="section-experience" class="section-container half-width">
                 <legend class="section-title">Experience</legend>
                 <div id="experience-carousel" class="carousel">
                     <div class="slides">
@@ -80,10 +80,10 @@
                     <div class="slide-counter"></div>
                 </div>
             </fieldset>
-            <fieldset id="section-education" class="section-container">
+            <fieldset id="section-education" class="section-container half-width">
                 <legend class="section-title">Education</legend>
             </fieldset>
-            <fieldset id="section-awards" class="section-container">
+            <fieldset id="section-awards" class="section-container half-width">
                 <legend class="section-title">Awards & Achievements</legend>
             </fieldset>
         </div>
