Added education details

--- a/index.html
+++ b/index.html
@@ -82,6 +82,16 @@
             </fieldset>
             <fieldset id="section-education" class="section-container half-width">
                 <legend class="section-title">Education</legend>
+                <div id="education-carousel" class="carousel">
+                    <div class="slides">
+                        <div class="slide">
+                            <h4>Bachelor of Science in Computer Science | Stephen F. Austin State University</h4>
+                            <h5><i>Aug. 2018 - May 2022</i></h5>
+                        </div>
+                    </div>
+                    <a class="prev" onclick="changeSlide('education-carousel', -1)">&#10094;</a>
+                    <a class="next" onclick="changeSlide('education-carousel', 1)">&#10095;</a>
+                    <div class="slide-counter"></div>
             </fieldset>
             <fieldset id="section-awards" class="section-container half-width">
                 <legend class="section-title">Awards & Achievements</legend>
