Hover and click skills
User can hover over and click skills to show their details.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
             <!-- Use keywords and icons to visually represent skillset. -->
             <fieldset id="section-skills" class="section-container half-width">
                 <legend class="section-title">Skills</legend>
+                <div id="selected-skill-summary">
+                    <label id="selected-skill-name"></label>
+                    <progress id="selected-skill-progress" value="100" max="100"></progress><br>
+                </div>
+                <hr>
             </fieldset>
             <fieldset id="section-experience" class="section-container half-width">
                 <legend class="section-title">Experience</legend>
@@ -107,6 +112,7 @@
     </footer>
 
     <script src="scripts/carousel.js"></script>
+    <script src="scripts/skills.js"></script>
 </body>
 
 </html>
