--- a/index.html
+++ b/index.html
@@ -46,6 +46,45 @@
                     <progress id="selected-skill-progress" value="100" max="100"></progress><br>
                 </div>
                 <hr>
+                <div class="skill">
+                    <span class="iconify skill-icon" data-icon="devicon-plain:java" data-skill-name="Java" data-skill-progress="75"></span>
+                </div>
+                <div class="skill">
+                    <span class="iconify skill-icon" data-icon="akar-icons:html-fill" data-skill-name="HTML" data-skill-progress="75"></span>
+                </div>
+                <div class="skill">
+                    <span class="iconify skill-icon" data-icon="akar-icons:css-fill" data-skill-name="CSS" data-skill-progress="75"></span>
+                </div>
+                <div class="skill">
+                    <span class="iconify skill-icon" data-icon="akar-icons:javascript-fill" data-skill-name="JavaScript" data-skill-progress="50"></span>
+                </div>
+                <div class="skill">
+                    <span class="iconify skill-icon" data-icon="tabler:sql" data-skill-name="SQL" data-skill-progress="50"></span>
+                </div>
+                <div class="skill">
+                    <span class="iconify skill-icon" data-icon="akar-icons:python-fill" data-skill-name="Python" data-skill-progress="25"></span>
+                </div>
+                <div class="skill">
+                    <span class="iconify skill-icon" data-icon="simple-icons:github" data-skill-name="GitHub" data-skill-progress="75"></span>
+                </div>
+                <div class="skill">
+                    <span class="iconify skill-icon" data-icon="devicon-plain:maven" data-skill-name="Maven" data-skill-progress="25"></span>
+                </div>
+                <div class="skill">
+                    <span class="iconify skill-icon" data-icon="simple-icons:androidstudio" data-skill-name="Android Studio" data-skill-progress="25"></span>
+                </div>
+                <div class="skill">
+                    <span class="iconify skill-icon" data-icon="akar-icons:php-fill" data-skill-name="PHP" data-skill-progress="50"></span>
+                </div>
+                <div class="skill">
+                    <span class="iconify skill-icon" data-icon="teenyicons:c-sharp-solid" data-skill-name="C#" data-skill-progress="25"></span>
+                </div>
+                <div class="skill">
+                    <span class="iconify skill-icon" data-icon="cib:dot-net" data-skill-name=".NET" data-skill-progress="25"></span>
+                </div>
+                <div class="skill">
+                    <span class="iconify skill-icon" data-icon="" data-skill-name="" data-skill-progress=""></span>
+                </div>
             </fieldset>
             <fieldset id="section-experience" class="section-container half-width">
                 <legend class="section-title">Experience</legend>
