Styled skill slider
Reworked and restyled the skills slider as well as how skills are listed. Added skill slider animation.

--- a/index.html
+++ b/index.html
@@ -34,56 +34,56 @@
                             data-icon="simple-icons:github"></span></a>
                 </div>
             </fieldset>
-            <!-- A carousel for space. -->
+
             <fieldset id="section-projects" class="section-container full-width">
                 <legend class="section-title">Projects</legend>
             </fieldset>
-            <!-- Use keywords and icons to visually represent skillset. -->
+
             <fieldset id="section-skills" class="section-container half-width">
                 <legend class="section-title">Skills</legend>
                 <div id="selected-skill-summary">
                     <label id="selected-skill-name"></label>
-                    <progress id="selected-skill-progress" value="100" max="100"></progress><br>
+                    <div id="outer-skill-meter-border">
+                        <div id="selected-skill-meter"></div>
+                    </div>
                 </div>
-                <hr>
-                <div class="skill">
-                    <span class="iconify skill-icon" data-icon="devicon-plain:java" data-skill-name="Java" data-skill-progress="75"></span>
-                </div>
-                <div class="skill">
-                    <span class="iconify skill-icon" data-icon="akar-icons:html-fill" data-skill-name="HTML" data-skill-progress="75"></span>
-                </div>
-                <div class="skill">
-                    <span class="iconify skill-icon" data-icon="akar-icons:css-fill" data-skill-name="CSS" data-skill-progress="75"></span>
-                </div>
-                <div class="skill">
-                    <span class="iconify skill-icon" data-icon="akar-icons:javascript-fill" data-skill-name="JavaScript" data-skill-progress="50"></span>
-                </div>
-                <div class="skill">
-                    <span class="iconify skill-icon" data-icon="tabler:sql" data-skill-name="SQL" data-skill-progress="50"></span>
-                </div>
-                <div class="skill">
-                    <span class="iconify skill-icon" data-icon="akar-icons:python-fill" data-skill-name="Python" data-skill-progress="25"></span>
-                </div>
-                <div class="skill">
-                    <span class="iconify skill-icon" data-icon="simple-icons:github" data-skill-name="GitHub" data-skill-progress="75"></span>
-                </div>
-                <div class="skill">
-                    <span class="iconify skill-icon" data-icon="devicon-plain:maven" data-skill-name="Maven" data-skill-progress="25"></span>
-                </div>
-                <div class="skill">
-                    <span class="iconify skill-icon" data-icon="simple-icons:androidstudio" data-skill-name="Android Studio" data-skill-progress="25"></span>
-                </div>
-                <div class="skill">
-                    <span class="iconify skill-icon" data-icon="akar-icons:php-fill" data-skill-name="PHP" data-skill-progress="50"></span>
-                </div>
-                <div class="skill">
-                    <span class="iconify skill-icon" data-icon="teenyicons:c-sharp-solid" data-skill-name="C#" data-skill-progress="25"></span>
-                </div>
-                <div class="skill">
-                    <span class="iconify skill-icon" data-icon="cib:dot-net" data-skill-name=".NET" data-skill-progress="25"></span>
-                </div>
-                <div class="skill">
-                    <span class="iconify skill-icon" data-icon="" data-skill-name="" data-skill-progress=""></span>
+                <div class="skills-list">
+                    <div class="skill">
+                        <span class="iconify skill-icon" data-icon="devicon-plain:java" data-skill-name="Java" data-skill-progress="75"></span>
+                    </div>
+                    <div class="skill">
+                        <span class="iconify skill-icon" data-icon="akar-icons:html-fill" data-skill-name="HTML" data-skill-progress="75"></span>
+                    </div>
+                    <div class="skill">
+                        <span class="iconify skill-icon" data-icon="akar-icons:css-fill" data-skill-name="CSS" data-skill-progress="75"></span>
+                    </div>
+                    <div class="skill">
+                        <span class="iconify skill-icon" data-icon="akar-icons:javascript-fill" data-skill-name="JavaScript" data-skill-progress="50"></span>
+                    </div>
+                    <div class="skill">
+                        <span class="iconify skill-icon" data-icon="tabler:sql" data-skill-name="SQL" data-skill-progress="50"></span>
+                    </div>
+                    <div class="skill">
+                        <span class="iconify skill-icon" data-icon="akar-icons:python-fill" data-skill-name="Python" data-skill-progress="25"></span>
+                    </div>
+                    <div class="skill">
+                        <span class="iconify skill-icon" data-icon="simple-icons:github" data-skill-name="GitHub" data-skill-progress="75"></span>
+                    </div>
+                    <div class="skill">
+                        <span class="iconify skill-icon" data-icon="devicon-plain:maven" data-skill-name="Maven" data-skill-progress="25"></span>
+                    </div>
+                    <div class="skill">
+                        <span class="iconify skill-icon" data-icon="simple-icons:androidstudio" data-skill-name="Android Studio" data-skill-progress="25"></span>
+                    </div>
+                    <div class="skill">
+                        <span class="iconify skill-icon" data-icon="akar-icons:php-fill" data-skill-name="PHP" data-skill-progress="50"></span>
+                    </div>
+                    <div class="skill">
+                        <span class="iconify skill-icon" data-icon="teenyicons:c-sharp-solid" data-skill-name="C#" data-skill-progress="25"></span>
+                    </div>
+                    <div class="skill">
+                        <span class="iconify skill-icon" data-icon="cib:dot-net" data-skill-name=".NET" data-skill-progress="25"></span>
+                    </div>
                 </div>
             </fieldset>
             <fieldset id="section-experience" class="section-container half-width">
