Updated experience summaries

--- a/index.html
+++ b/index.html
@@ -94,17 +94,18 @@
                             <h4>Junior Systems Administrator | East Texas Professional Credit Union</h4>
                             <h5><i>Jan. 2024 - Present</i></h5>
                             <ul>
-                                <li>Championed the need for improved password management, driving the planning, proposal, and successful implementation of a new system.</li>
-                                <li>Identified inefficiencies in the existing close account procedure and developed a streamlined program using HTML, CSS, JavaScript, and PowerOn, increasing efficiency and ensuring complete account closure.</li>
+                                <li>Identified critical security gap, led password security initiative, reducing password reset/lockout tickets by 20% through successful implementation of a new system, improving overall data security.</li>
+                                <li>Analyzed inefficiencies in the close account procedure, created a customized program using HTML, CSS, JavaScript, and PowerOn that improved efficiency by over 50%, guaranteeing a thorough account closure process.</li>
                                 <li>Actively fostered clear communication and collaboration with stakeholders, vendors, and teammates, ensuring smooth project implementation.</li>
+                                <li>Demonstrated technical expertise and collaboration skills, recognized with Employee of the Month award (January 2024).</li>
                             </ul>
                         </div>
                         <div Class="slide">
                             <h4>IT Service Specialist II | East Texas Professional Credit Union</h4>
                             <h5><i>Sept. 2022 - Jan. 2024</i></h5>
                             <ul>
-                                <li>Effectively communicated with staff and management to collaborate on projects and resolve a high volume of technical issues.</li>
-                                <li>Developed a Java application to automate a manual file conversion process, streamlining workflow by an estimated 60% and improving accuracy of resulting files.</li>
+                                <li>Coordinated with staff and management to collaborate on projects and resolve over 100 technical issues per month.</li>
+                                <li>Developed a Java application to automate a manual file conversion process, streamlining workflow by an estimated 60% and improving accuracy.</li>
                                 <li>Enhanced staff landing page through HTML, CSS, and JavaScript, resulting in increased visual engagement and faster access to critical resources.</li>
                                 <li>Identified inefficiencies in processing large member data files and developed custom Java scripts to automate matching and validation, leading to improved accuracy and significant time savings.</li>
                             </ul>
@@ -113,9 +114,10 @@
                             <h4>Teller II | East Texas Professional Credit Union</h4>
                             <h5><i>June 2018 - Sept. 2022</i></h5>
                             <ul>
-                                <li>Achieved 99% accuracy in high-volume transactions.</li>
-                                <li>Maintained a perfect record of vault security for over 3 years, ensuring the integrity of records.</li>
+                                <li>Maintained 99% accuracy in high-volume transactions.</li>
+                                <li>Safeguarded a perfect record of vault security for over 3 years, ensuring the integrity of records.</li>
                                 <li>Facilitated clear communication between membership and staff to effectively address issues and fulfill member needs.</li>
+                                <li>Recognized as Employee of the Month for exceptional service (January 2022).</li>
                             </ul>
                         </div>
                     </div>
