Added missing div

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
                     <a class="prev" onclick="changeSlide('education-carousel', -1)">&#10094;</a>
                     <a class="next" onclick="changeSlide('education-carousel', 1)">&#10095;</a>
                     <div class="slide-counter"></div>
+                </div>
             </fieldset>
             <fieldset id="section-awards" class="section-container half-width">
                 <legend class="section-title">Awards & Achievements</legend>
