Modified alignment of projects slide
Modified the alignment of the projects slides so that images are centered vertically.

--- a/index.html
+++ b/index.html
@@ -40,18 +40,20 @@
                 <div id="project-carousel" class="carousel">
                     <div class="slides">
                         <div class="slide">
-                            <div class="project-image-container">
-                                <img src="images/tradenote.jpg" alt="TradeNote">
-                            </div>
-                            <div class="project-text-container">
-                                <h4>TradeNote: Candlestick Charts with Entry/Exit Notations</h4>
-                                <h5><i>Feb. 2024 - Mar. 2024</i></h5>
-                                <ul>
-                                    <li>Collaborated with a team of 5 developers to create a web application that allows users to track their stock trades and analyze their performance.</li>
-                                    <li>Developed the front-end using HTML, CSS, and JavaScript, and the back-end using PHP and MySQL.</li>
-                                    <li>Implemented user authentication and authorization using PHP sessions and MySQL databases.</li>
-                                    <li>Designed and implemented the database schema to store user data and trade information.</li>
-                                </ul>
+                            <div class="project-slide-content">
+                                <div class="project-image-container">
+                                    <img src="images/tradenote.jpg" alt="TradeNote">
+                                </div>
+                                <div class="project-text-container">
+                                    <h4>TradeNote: Candlestick Charts with Entry/Exit Notations</h4>
+                                    <h5><i>Feb. 2024 - Mar. 2024</i></h5>
+                                    <ul>
+                                        <li>Collaborated with a team of 5 developers to create a web application that allows users to track their stock trades and analyze their performance.</li>
+                                        <li>Developed the front-end using HTML, CSS, and JavaScript, and the back-end using PHP and MySQL.</li>
+                                        <li>Implemented user authentication and authorization using PHP sessions and MySQL databases.</li>
+                                        <li>Designed and implemented the database schema to store user data and trade information.</li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
