--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                             </ul>
                         </div>
                     </div>
-                    <a class="prev" onclick="changeSlide('experience-carousel', -1)">&#10094;</a>
-                    <a class="next" onclick="changeSlide('experience-carousel', 1)">&#10095;</a>
+                    <a class="carousel-prev" onclick="changeSlide('experience-carousel', -1)">&#10094;</a>
+                    <a class="carousel-next" onclick="changeSlide('experience-carousel', 1)">&#10095;</a>
                     <div class="slide-counter"></div>
                 </div>
             </fieldset>
@@ -135,8 +135,8 @@
                             <h5><i>Aug. 2018 - May 2022</i></h5>
                         </div>
                     </div>
-                    <a class="prev" onclick="changeSlide('education-carousel', -1)">&#10094;</a>
-                    <a class="next" onclick="changeSlide('education-carousel', 1)">&#10095;</a>
+                    <a class="carousel-prev" onclick="changeSlide('education-carousel', -1)">&#10094;</a>
+                    <a class="carousel-next" onclick="changeSlide('education-carousel', 1)">&#10095;</a>
                     <div class="slide-counter"></div>
                 </div>
             </fieldset>
